# TitanFrame

./: .gitignore  Dockerfile  Procfile  README.md  implementation_plan.md  pyproject.toml  query_ecommerce.py  render.yaml  requirements.txt  run_ecom_dashboard.py  test_dashboard.py  vercel.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  bench_filter.py  bench_groupby.py  bench_io.py  bench_join.py  generate_data.py  run_benchmark.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
docs/: api_reference.md  architecture.md
docs/tutorials/: quickstart.md
examples/: gpu_analytics.py  out_of_core_etl.py  quickstart.py
tests/compatibility/: test_pandas_compat.py
tests/integration/: test_end_to_end.py  test_multi_gpu.py  test_spill.py
tests/unit/: test_dtype.py  test_execution.py  test_expression.py  test_gpu.py  test_gpu_kernels.py  test_io.py  test_logical_plan.py  test_memory.py  test_memory_manager.py  test_optimizer.py  test_phase2_expr_modules.py  test_physical_plan.py  test_schema.py
titanframe/: __init__.py  __main__.py  _version.py
titanframe/api/: __init__.py  config.py  dataframe.py  functions.py  groupby.py  lazyframe.py  series.py
titanframe/core/: __init__.py  chunk.py  column.py  dtypes.py  schema.py  table.py
titanframe/dashboard_dist/: index.html
titanframe/engine/: __init__.py  context.py  partition.py  pipeline.py  scheduler.py
titanframe/expr/: __init__.py  agg_expr.py  base.py  binary_expr.py  cast_expr.py  column_expr.py  datetime_expr.py  literal_expr.py  string_expr.py  udf_expr.py  unary_expr.py  window_expr.py
titanframe/gpu/: __init__.py  autotuner.py  (+2 more)
(+100 files in other folders)
