[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "titanframe"
version = "0.1.0"
description = "A Pandas-like DataFrame library for out-of-core, GPU-accelerated computation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Pankaj" },
]
keywords = ["dataframe", "gpu", "arrow", "out-of-core", "lazy-execution", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0.0",
    "triton>=2.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "sqlalchemy>=2.0.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
]
all = ["titanframe[gpu,dev,docs]"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
